feat: initialize Ktab backend with modular library, book management, and security infrastructure